--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
-streamlit
-openai
-python-dotenv
+streamlit==1.27.2
+openai==1.3.5
+python-dotenv==1.0.0
+langchain==0.0.335
+langchain-openai==0.0.2.post1
